--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -714,6 +714,6 @@
     <string name="book_format_softcover_oblong">Мягкое покрытие - продолговатый</string>
     <string name="lbl_purge_blns">Очистить состояние узла</string>
     <string name="info_purge_blns_all">Очистить состояние узла из всех списков</string>
-    <string name="info_purge_blns_item_name">Очистить состояние узла %1$s \"%2$s\"?</string>
+    <string name="info_purge_blns_item_name">Очистить состояние узла %1$s «%2$s»?</string>
 
 </resources>
