--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -254,6 +254,7 @@
     <string name="lbl_date_added_day">Eklenen gün</string>
     <string name="lbl_date_added_month">Eklenen ay</string>
     <string name="lbl_date_added_year">Eklenen yıl</string>
+    <string name="pc_lists">Listeler</string>
     <string name="pc_advanced_options">Gelişmiş</string>
     <string name="lbl_all_bookshelves">Tüm raflardan</string>
     <string name="lbl_book_type_anthology">Seçmeler</string>
