--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -717,4 +717,5 @@
     <string name="lbl_purge_blns">Löschen Sie den Knotenstatus</string>
     <string name="info_purge_blns_all">Löschen Sie den Knotenstatus aus allen Listen</string>
     <string name="info_purge_blns_item_name">Knotenstatus von %1$s „%2$s“ löschen?</string>
+    <string name="error_updates_aborted">Aktualisierungen abgebrochen</string>
 </resources>
