--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -223,9 +223,9 @@
     <string name="error_storage_no_space_left">Mevcut depolama yetersiz</string>
     <string name="error_storage_not_accessible">Lütfen depolamanın erişilebilir olduğunu kontrol edin.</string>
     <string name="error_storage_not_writable">Lütfen deponun yazılabilir olduğunu ve yeterli alana sahip olduğunu kontrol edin.</string>
-    <string name="error_unknown">Bilinmeyen bir hata oluştu</string>
+    <string name="error_unexpected">Bilinmeyen bir hata oluştu</string>
     <string name="error_unknown_host">“%1$s” adresindeki hizmetle bağlantı sorunu oluştu</string>
-    <string name="error_unknown_long">Beklenmedik bir sorun oluştu. Sorun devam ederse, ayarlar sayfasının altındaki “%1$s” seçeneğini kullanarak desteğe başvurun.</string>
+    <string name="error_unexpected_long">Beklenmedik bir sorun oluştu. Sorun devam ederse, ayarlar sayfasının altındaki “%1$s” seçeneğini kullanarak desteğe başvurun.</string>
     <string name="error_unsupported_version_v">Desteklenmeyen sürüm: %1$d</string>
     <string name="error_upgrade_not_supported">%1$s\'ten daha eski sürümlerden yükseltme desteklenmez.</string>
     <string name="option_fab_add_book_by_barcode_scan">Barkod tara</string>
