--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -110,7 +110,7 @@
     <string name="action_skip">Overslaan</string>
     <string name="action_synchronize">Synchroniseren</string>
     <string name="option_amazon_ellipsis">Amazon…</string>
-    <string name="and_others">%s …</string>
+    <string name="and_others">%1$s …</string>
     <string name="and_others_plus"><![CDATA[%1$s … <small>[+%2$d]</small>]]></string>
     <string name="bob_empty_author">(De auteur ontbreekt)</string>
     <string name="bob_empty_day">(Dag niet ingevuld)</string>
@@ -151,7 +151,7 @@
     <string name="action_start_import">Start import</string>
     <string name="action_stop_scanning">Stop scanning</string>
     <string name="btn_this_book">Dit boek</string>
-    <string name="size_bytes">%.0fB</string>
+    <string name="size_bytes">%1$.0fB</string>
     <string name="pc_camera">Camera</string>
     <string name="pe_camera_back">Camera aan de achterkant</string>
     <string name="pe_camera_front">Camera aan de voorkant</string>
@@ -241,7 +241,7 @@
     <string name="option_moving_covers_from_x_to_y">Verplaats alle covers van „%1$s” naar „%2$s”</string>
     <string name="option_isfdb_menu_populate_toc">Automatisch titels invullen (alleen ISFDB)</string>
     <string name="info_isfdb_warning_limited_to">(alleen ondersteund door de ISFDB-website)</string>
-    <string name="size_kilobytes">%.2fkB</string>
+    <string name="size_kilobytes">%1$.2fkB</string>
     <string name="lbl_about">Over deze App</string>
     <string name="lbl_about_contact">Contact:</string>
     <string name="lbl_add_book">Boek Toevoegen</string>
@@ -452,7 +452,7 @@
     <string name="lbl_year">Jaar</string>
     <string name="list_and">en</string>
     <string name="list_element">• %s</string>
-    <string name="size_megabytes">%.2fMB</string>
+    <string name="size_megabytes">%1$.2fMB</string>
     <string name="option_amazon_books_by_author">Boeken van deze auteur</string>
     <string name="option_amazon_books_by_author_in_series">Boeken per auteur/reeks</string>
     <string name="option_amazon_books_in_series">Boeken in deze reeks</string>
@@ -535,7 +535,7 @@
     <string name="progress_msg_connecting">Verbinden…</string>
     <string name="progress_msg_downloading">Downloaden…</string>
     <string name="progress_msg_loading">Laden…</string>
-    <string name="progress_msg_loading_page">Pagina %1$d… wordt geladen</string>
+    <string name="progress_msg_loading_page">Pagina %1$d wordt geladen…</string>
     <string name="progress_msg_optimizing">Databases optimaliseren…</string>
     <string name="progress_msg_please_wait">Even geduld…</string>
     <string name="progress_msg_rebuilding_search_index">Zoekindex opnieuw opbouwen…</string>
@@ -672,7 +672,7 @@
     <string name="warning_if_month_set_year_must_be">Als de maand is gespecificeerd moet ook het jaar worden ingevuld.</string>
     <string name="warning_image_copy_failed">Afbeelding kon niet gekopieerd worden.</string>
     <string name="warning_image_not_found">Afbeelding werdt niet gevonden.</string>
-    <string name="warning_immediate_global_changes">Let op: Veranderingen worden direct en globaal toegepast!</string>
+    <string name="warning_immediate_global_changes">Let op: Veranderingen worden direct en globaal toegepast.</string>
     <string name="warning_import_csv">Waarschuwing. Het importeren van gegevens kan bestaande boekgegevens onbedoeld bijwerken met nieuwe informatie als de UUID-kolom niet aanwezig is en de id in het import-bestand dezelfde is als het bestaande id. Dit is meestal geen bezwaar als je een veld in een exportbestand hebt veranderd. Als je een nieuw boek item hebt gemaakt, of iemand anders zijn boeken importeert, zorg dan dat het UUID veld aanwezig is of dat het id veld leeg is.</string>
     <string name="warning_import_csv_unescaped_quote">Niet ge-escaped aanhalingsteken op rij %1$d, positie %2$d</string>
     <string name="warning_import_failed_for_lines_lots">Het parseren is mislukt voor regels \n%1$s\n en andere.</string>
